# madeinoz-voice-server

./: .env.development  .env.example  .gitignore  404.html  AGENTPERSONALITIES.md  ATTRIBUTION.md  CHANGELOG.md  CLAUDE.md  README.md  cliff.toml  eslint.config.js  homebrew.mxcl.voice-server.plist  index.html  mkdocs.yml  package-lock.json  package.json  pyproject.toml  requirements.txt  tsconfig.json
.claude/: settings.local.json
.codanna/: settings.toml
.github/: codeql-config.yml  codeql.yml
.github/codeql/: config.yml
.github/workflows/: ci.yml  codeql.yml
.specify/memory/: constitution.md
.specify/templates/: plan-template.md  tasks-template.md
Formula/: madeinoz-voice-server.rb
KOKORO_VOICES/: index.html
MIGRATION/: index.html
VOICE_EXAMPLES/: index.html
VOICE_GUIDE/: index.html
VOICE_QUICK_REF/: index.html
agent-voices/: index.html
api/: index.html
docs/: DEVELOPMENT.md  KOKORO_VOICES.md  MIGRATION.md  VOICE_EXAMPLES.md  VOICE_GUIDE.md  VOICE_QUICK_REF.md  agent-voices.md  api.md  fifo-queue.md  index.md  queue-architecture.md
fifo-queue/: index.html
queue-architecture/: index.html
reports/: MLX_AUDIO_EVALUATION.md
reports/agent/: 2026-02-06-20-51-mlx-audio-qwen-tts-investigation.md  2026-02-06-Qwen3-TTS-API-Specification.md  2026-02-07-python-backend-removal-plan.md
scripts/: generate-reference.ts
search/: search_index.json
specs/001-qwen-tts/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-qwen-tts/checklists/: requirements.md
specs/001-qwen-tts/contracts/: api.yaml
specs/002-fifo-notify-queue/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-fifo-notify-queue/checklists/: requirements.md
specs/002-fifo-notify-queue/contracts/: api.yaml
src/: index.ts
src/py/: __init__.py  benchmark_mlx.py  qwen_tts_server.py  test_kokoro_simple.py  test_mlx_direct.py  test_mlx_py313.py
src/ts/: server.ts
src/ts/constants/: KOKORO_VOICES.ts
src/ts/middleware/: cors.ts  rate-limiter.ts
src/ts/models/: health.ts  notification.ts  pronunciation.ts  queue.ts  tts.ts  voice-config.ts  voice-upload.ts
src/ts/services/: mlx-tts-client.ts  notification-queue.ts  pronunciation.ts  prosody-translator.ts  subprocess-manager.ts  tts-client.ts  voice-loader.ts  voice-storage.ts
src/ts/utils/: audio-validator.ts  logger.ts  text-sanitizer.ts
tests/integration/: api.test.ts  queue-api.test.ts
tests/mocks/: index.ts
tests/py/: conftest.py  test_tts_server.py
tests/ts/: server.test.ts  voice-storage.test.ts
tests/unit/middleware/: cors.test.ts
tests/unit/models/: validation.test.ts
tests/unit/services/: notification-queue.test.ts  pronunciation.test.ts  prosody-translator.test.ts
